--- a/newamericadotorg/assets/scss/pages/weekly/_header.scss
+++ b/newamericadotorg/assets/scss/pages/weekly/_header.scss
@@ -4,6 +4,8 @@
 	@include transition(max-height 0.6s ease);
 	overflow-y: hidden;
 	overflow-x: hidden;
+	position: relative;
+	z-index: 10;
 
 	&.open {
 		max-height: 2000px;
@@ -25,6 +27,11 @@
 			display: block;
 			line-height: $weekly-header-height;
 		}
+	}
+
+	&__nav__heading {
+		float: right;
+		line-height: $weekly-header-height;
 	}
 
 	&__page{
